Updates from Overleaf

--- a/latex/citation.bib
+++ b/latex/citation.bib
@@ -59,20 +59,6 @@
   doi = {10.1103/PhysRevFluids.5.034002}
 }
 
-@incollection{GulaEtAl_22a,
-  title = {Chapter 8 - {{Submesoscale}} Processes and Mixing},
-  booktitle = {Ocean {{Mixing}}},
-  author = {Gula, Jonathan and Taylor, John and Shcherbina, Andrey and Mahadevan, Amala},
-  editor = {Meredith, Michael and Naveira Garabato, Alberto},
-  year = {2022},
-  month = jan,
-  pages = {181--214},
-  publisher = {{Elsevier}},
-  doi = {10.1016/B978-0-12-821512-8.00015-3},
-  isbn = {978-0-12-821512-8},
-  langid = {english}
-}
-
 @misc{PhysicsGirl_19,
   title = {Most {{People Don}}'t {{Know Wine Moves Like This}} | {{EVERYDAY MYSTERY}}},
   author = {{Physics Girl}},
@@ -113,6 +99,38 @@
   langid = {english},
   nationality = {WO}
 }
+
+@book{Buhler_14,
+  title = {Waves and {{Mean Flows}}},
+  author = {B{\"u}hler, Oliver},
+  year = {2014},
+  series = {Cambridge {{Monographs}} on {{Mechanics}}},
+  edition = {Second},
+  publisher = {{Cambridge University Press}},
+  address = {{Cambridge}},
+  doi = {10.1017/CBO9781107478701},
+  isbn = {978-1-107-66966-6}
+}
+
+@incollection{Buhler_14b,
+  title = {Elements of Fluid Dynamics},
+  booktitle = {Waves and {{Mean Flows}}},
+  editor = {B{\"u}hler, Oliver},
+  year = {2014},
+  series = {Cambridge {{Monographs}} on {{Mechanics}}},
+  edition = {Second},
+  pages = {3--21},
+  publisher = {{Cambridge University Press}},
+  address = {{Cambridge}},
+  doi = {10.1017/CBO9781107478701.002},
+  isbn = {978-1-107-66966-6}
+}
+
+
+
+
+
+
 
 
 
