Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -50,6 +50,15 @@ Automation is great, but we should still be careful about the details. For examp
 European Centre for Medium-Range Weather Forecasts (2019): ERA5 Reanalysis (0.25 Degree Latitude-Longitude Grid). Research Data Archive at the National Center for Atmospheric Research, Computational and Information Systems Laboratory. Dataset. https://doi.org/10.5065/BH6N-5N20. Accessed† dd mmm yyyy.
 \end{minipage}%
 
+\section{Live Demonstration}
+\cite{ChienCramer_22, MaxianDonev_22}
+
+Chien, S.Y., Cramer, M.S., 2022. Compressible high-pressure lubrication flows in thrust bearings. Journal of Fluid Mechanics 939. https://doi.org/10.1017/jfm.2022.240
+
+Maxian, O., Donev, A., 2022. Slender body theories for rotating filaments. arXiv:2203.12059 [math-ph, physics:physics].
+
+
+
 
 \newpage
 \printbibliography
