--- a/latex/citation.bib
+++ b/latex/citation.bib
@@ -128,6 +128,34 @@
 
 
 
+@article{ChienCramer_22,
+  title = {Compressible High-Pressure Lubrication Flows in Thrust Bearings},
+  author = {Chien, S. Y. and Cramer, M. S.},
+  year = {2022},
+  month = may,
+  journal = {Journal of Fluid Mechanics},
+  volume = {939},
+  publisher = {{Cambridge University Press}},
+  issn = {0022-1120, 1469-7645},
+  doi = {10.1017/jfm.2022.240},
+  langid = {english}
+}
+
+@article{MaxianDonev_22,
+  title = {Slender Body Theories for Rotating Filaments},
+  author = {Maxian, Ondrej and Donev, Aleksandar},
+  year = {2022},
+  month = mar,
+  journal = {arXiv:2203.12059 [math-ph, physics:physics]},
+  eprint = {2203.12059},
+  eprinttype = {arxiv},
+  primaryclass = {math-ph, physics:physics},
+  archiveprefix = {arXiv}
+}
+
+
+
+
 
 
 
