Updates from Overleaf

--- a/latex/citation.bib
+++ b/latex/citation.bib
@@ -69,7 +69,7 @@
 @phdthesis{Shakespeare_15,
   type = {Thesis},
   title = {On the Generation of Waves during Frontogenesis},
-  author = {Shakespeare, Callum},
+  author = {Shakespeare, Callum J.},
   year = {2015},
   month = jun,
   doi = {10.17863/CAM.16142},
